--- a/src/input.css
+++ b/src/input.css
@@ -23,6 +23,12 @@
     background-size: 650px;
 }
 
+#details {
+    background-image: url('../images/illustration-laptop-mobile.svg');
+    background-repeat: no-repeat;
+    background-position: top center;
+}
+
 /* Dropdown Menu Custom Style */
 .dropdown-menu {
     opacity: 0;
@@ -112,7 +118,13 @@
 
     #sub-details {
         background-size: 850px;
-        background-position: top 90% left -35%;
+        background-position: top left -35%;
+    }
+
+    #details {
+        background-image: url('../images/illustration-laptop-desktop.svg');
+        background-repeat: no-repeat;
+        background-position: top left -60%;
     }
   
 }
